<resources>
    <string name="app_name">ShoeStore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_button">Login</string>
    <string name="sign_up_button">Sign up?</string>
    <string name="shoe_store">Shoe Store</string>
    <string name="email_label">Email:</string>
    <string name="password_label">Password:</string>
    <string name="shore_store_logo_description">Shore Store logo</string>
    <string name="email_hint">Enter your Email</string>
    <string name="password_hint">Enter your password</string>
    <string name="instruction_text">On the next screen, press the + button to add shoes</string>
    <string name="instruction_title">Instructions</string>
    <string name="desc_label">Description:</string>
    <string name="size_label">Size:</string>
    <string name="name_label">Name:</string>
    <string name="company_label">Company:</string>
    <string name="welcome_text">This is the shoe store!</string>
    <string name="welcome_title">Welcome!</string>
    <string name="enter_store_button">Enter Store</string>
    <string name="cancel_button">Cancel</string>
    <string name="save_button">Save</string>
</resources>
